Use URI and indexed search in TECL